fix: 양식 변경